last harbinger description add

--- a/mysite/blog/templates/about/aboutMe.html
+++ b/mysite/blog/templates/about/aboutMe.html
@@ -63,22 +63,22 @@
                 <div class="col-sm-8 leftSide">
                     <h1 class="textTitle">Trochę o mnie</h1>
                     <hr>
-                    <p>Na początek wypadałoby się przedstawić. Nazywam się Aleksander, mam dwadzieścia jeden lat i&nbsp;niemal od
+                    <p>Na początek wypadałoby się przedstawić. Nazywam się Aleksander i&nbsp;niemal od
                         urodzenia mieszkam w Gdańsku, gdzie&nbsp;już trzeci rok studiuję informatykę. Przeglądaną przez Ciebie stronę
                         napisałem sam, więc&nbsp;mam nadzieję, że&nbsp;w&nbsp;chwili, gdy&nbsp;zobaczyłeś stronę główną, nie&nbsp;pomyślałeś czegoś w stylu
                         „Oho, to musi być dzieło studenta!” :D</p>
 
                     <p>Blog służy głównie do publikowania mojej twórczości. Jeżeli interesujesz się tematyką fantasy, to&nbsp;zapraszam do
-                        działu Teksty, gdzie&nbsp;będziesz mógł przeczytać kilka rozdziałów książki, nad&nbsp;którą obecnie pracuję. Będziesz
+                        działu "Teksty", gdzie&nbsp;będziesz mógł przeczytać kilka rozdziałów książki, nad&nbsp;którą obecnie pracuję. Będziesz
                         miał też okazję wypowiedzieć się na ten temat w komentarzu (niezwykle cenię sobie zasłużoną krytykę).</p>
 
-                    <p>Treści na mojej stronie są też przeznaczone dla czytelnika, który&nbsp;szuka rady odnośnie książki do czytania lub też
-                        po prostu szuka newsów ze świata literatury. Takich podróżników zapraszam do działu Recenzje, gdzie&nbsp;wypowiadam się
-                        na temat przeczytanych przeze mnie książek, <br> i&nbsp;obserwowania strony głównej, gdzie&nbsp;co tydzień będzie pojawiać się
-                        ciekawy post.</p>
+                    <p>Treści na mojej stronie są przeznaczone również dla czytelnika, który&nbsp;szuka rady odnośnie książki do przeczytania lub też
+                        po prostu szuka newsów ze świata literatury. Takich podróżników zapraszam do działu "Recenzje", gdzie&nbsp;wypowiadam się
+                        na temat przeczytanych przeze mnie książek, <br> i&nbsp;obserwowania strony głównej, gdzie&nbsp;co mniej więcej półtora
+                        tygodnia będzie pojawiać się ciekawy post.</p>
 
-                    <p>Niżej umieściłem dla ciekawskich rozszerzoną wersję O mnie, tymczasem&nbsp;życzę wszystkim ciekawej podróży po mojej stronie
-                        i&nbsp;zapraszam do&nbsp;Kontaktu :)</p>
+                    <p>Dla ciekawskich umieściłem niżej rozszerzoną wersję "O mnie", tymczasem&nbsp;życzę wszystkim ciekawej podróży po mojej stronie
+                        i&nbsp;zapraszam do&nbsp;kontaktu :)</p>
                     <hr>
                     <h3>A więc rozsiądź się wygodnie...</h3>
                     <hr>
@@ -96,39 +96,39 @@
                     <p>Moja podstawówka była połączona z gimnazjum, uczyła tam moja mama. Rodzice zdecydowali, że&nbsp;trafię do klasy z profilem
                         sportowym, za&nbsp;co do dzisiaj jestem im wdzięczny. Przez sześć lat, aż&nbsp;do zakończenia gimnazjum, trenowałem piłkę ręczną.
                         W międzyczasie jeden z kolegów pokazał mi, czym&nbsp;jest beatbox, zarażając mnie kolejną zajawką. W weekendy graliśmy mecze
-                        ligowe, a&nbsp;w&nbsp;tygodniu czasem miałem okazję popluć trochę przez mikrofon, gdy&nbsp;chłopaki od sprzętu zbierali swoje zabawki po jakimś
-                        apelu lub uroczystości. Czasem robiłem to przed całą szkołą (nie chciałem napisać, że&nbsp;plułem na całą szkołę) - nigdy nie
-                        miałem problemu z wyjściem na scenę (no, może jedynie lekką tremę) i popisania się przed wielką publicznością.
+                        ligowe, a&nbsp;w&nbsp;tygodniu czasem miałem okazję "popluć" trochę przez mikrofon, gdy&nbsp;chłopaki od sprzętu zbierali swoje zabawki
+                        po próbie jakiegoś apelu. Czasem robiłem to przed całą szkołą - nigdy nie miałem problemu z wyjściem na scenę
+                        (no, może jedynie lekką tremę) i popisania się przed liczną publicznością.
                         Tak samo nie stresowałem się podczas meczu – najgorszy był czas oczekiwania do pierwszego gwizdka.
-                        Potem przełączałem się na tryb działania. Trema znikała, a&nbsp;ja dawałem z siebie wszystko. Za Narnię i za Aslana!</p>
+                        Potem przełączałem się na tryb działania. Trema znikała, a&nbsp;ja dawałem z siebie wszystko.</p>
                     <P>Parę razy usłyszałem od ludzi, że&nbsp;na boisku jestem innym człowiekiem. Powiem&nbsp;tak: piłka ręczna to sport dla twardzieli,
                         a&nbsp;ja poza boiskiem byłem raczej miłym dla wszystkich pacyfistą. Zresztą chyba nadal taki jestem. Sęk w tym, że&nbsp;zmieniałem
                         się na boisku. Nie byłem największym zabijaką na parkiecie, ale&nbsp;kryjący mnie gość musiał się liczyć z tym, że&nbsp;nie będzie
                         miał ze mną łatwo. </P>
 
                     <hr>
-                    <h3>Początek drogi.</h3>
+                    <h3>Początek drogi</h3>
                     <hr>
                     <p>Miałem może z dwanaście lat, gdy&nbsp;stwierdziłem, że&nbsp;mam dość książek, które wybiera mi tata. Obecnie nie mam nic do
                         „Tomka w Krainie Kangurów” czy „Pana Samochodzika”, jednak wtedy te książki wydawały mi się po prostu nudne.
                         Nie pamiętam, jak&nbsp;to się stało, jednak&nbsp;w końcu udaliśmy się do księgarni, gdzie tata kupił mi moją pierwszą oficjalną
-                        książkę –&nbsp;„Harrego Pottera i Kamień Filozoficzny”! I tak załapałem bakcyla, który&nbsp;trzyma mnie do dzisiaj. </p>
-                    <p>Przeczytałem cała książkę jednym tchem, a&nbsp;potem zająłem się resztą cyklu. Potem chłonąłem powieści z uniwersum „Zwiadowców”
+                        książkę –&nbsp;„Harrego Pottera i&nbsp;Kamień Filozoficzny”! I&nbsp;tak załapałem bakcyla, który&nbsp;trzyma mnie do dzisiaj.</p>
+                    <p>Przeczytałem cała książkę jednym tchem, a&nbsp;potem zająłem się&nbsp;resztą cyklu. Pochłonąłem powieści z uniwersum „Zwiadowców”
                         i „Malowanego Człowieka”, a&nbsp;jeszcze później... Cóż, sporo tego było. W gruncie rzeczy moja przygoda z literaturą zaczęła
                         się od kupienia wybranej przeze mnie książki. Nagle magicznym sposobem zdobywanie dodatkowego czasu grania stało się
-                        łatwe i, co&nbsp;ważniejsze, przyjemne. Tak, nieprzypadkowo napisałem tutaj „magicznym”. Zdradzę ci też w sekrecie, że jestem mugolem.</p>
+                        łatwe i, co&nbsp;ważniejsze, przyjemne. Tak, nieprzypadkowo napisałem tutaj „magicznym”.</p>
                     <p>Ale skąd wziął się pomysł na pisanie?</p>
 
                     <hr>
-                    <h3>Nie musisz zrobić tego lepiej.</h3>
+                    <h3>Nie musisz zrobić tego lepiej</h3>
                     <hr>
-                    <p>W gimnazjum w ręce wpadł mi „Eragon” Christophera Paoliniego. Ogromnie zdziwiło mnie, gdy &nbsp;dowiedziałem się, że&nbsp;w
+                    <p>W gimnazjum w ręce wpadł mi „Eragon” Christophera Paoliniego. Ogromnie zdziwiło mnie, gdy&nbsp;dowiedziałem się, że&nbsp;w
                         dniu wydania swej powieści Chris miał zaledwie szesnaście lat! Ja kończyłem bodajże wtedy trzynasty albo
                         czternasty rok życia i&nbsp;pełen entuzjazmu pomyślałem "Jeśli on mógł, to&nbsp;czemu nie ja?" Stwierdziłem nawet, że&nbsp;go
                         pobiję i wydam książkę przed szesnastymi urodzinami. Weź tylko potrzymaj mi piwo… A&nbsp;raczej soczek.</p>
                     <p>Czytałem dużo poradników pisania. Przytoczę tu słowa jednego z autorów: "W pisaniu książki nie musisz zrobić tego lepiej
                         od profesjonalnego pisarza. Powiedz sobie, że&nbsp;możesz zrobić to równie dobrze".</p>
-                    <p>Jak pewnie się domyślasz, nie&nbsp;udało się nawet równie dobrze :)</p>
+                    <p>Jak pewnie się domyślasz, do&nbsp;tej pory nie udało się nawet równie dobrze :)</p>
                     <p>Pomysł miałem, coś&nbsp;też tam pisałem, ale, gdy&nbsp;przeczytałem pierwszy napisany przeze mnie rozdział, mina mi zrzedła.
                         Wtedy nie wiedziałem, jak&nbsp;ważne jest stworzenie szczegółowego planu powieści i przekonujących postaci. Po prostu opisywałem
                         przygody mojego bohatera, który&nbsp;do złudzenia przypominał Willa Treaty ze Zwiadowców. O prawach związanych z plagiatem dowiedziałem
@@ -151,18 +151,16 @@
                         Czasem też towarzyszy im Mistrz Gry, który opisuje zachowania postaci niezależnych, zmiany&nbsp;pogody, nagłe zwroty akcji
                         i tak dalej – o możliwościach wpływania postaci gracza na środowisko bez zgody Mistrza Gry decyduje regulamin poszczególnego
                         forum. Gdzieś tam też administratorzy pchają naprzód jakąś wielką fabułę, żeby&nbsp;gracze mieli, co&nbsp;robić.</p>
-                    <p>Gorąco polecam spróbować.</p>
+                    <p>Gorąco polecam spróbować!</p>
                     <p>Tym sposobem zabawy zainteresowałem się w połowie gimnazjum, a z ostatnim pbf'em pożegnałem się na początku 2019 roku.
-                        Przez ten czas wcieliłem się w niemal sześć postaci w uniwersum Złodzieja Pioruna Ricka Riordana, Marvelowskiego Kapitana
+                        Przez ten czas wcieliłem się w niemal sześć postaci w uniwersum "Złodzieja Pioruna" Ricka Riordana, Marvelowskiego Kapitana
                         Amerykę, wilkołaka w świecie zdominowanym przez wampiry, detektywa w autorskim świecie fantasy, młodą złodziejkę w
-                        czasie apokalipsy zombie, awanturniczego krasnoluda podróżującego szlakiem przetartym przez słynnego Wiedźmina,
+                        czasie apokalipsy zombie, awanturniczego krasnoluda podróżującego szlakiem przetartym przez słynnego "Wiedźmina",
                         niewidomego pirata w World of Warcraft, a także starego paladyna zesłanego do Górniczej Doliny, gdzie rozpoczęła
                         się akcja legendarnej gry Gothic. Trochę tych forów było, a&nbsp;na&nbsp;każdym poznawałem innych ludzi, od&nbsp;których się uczyłem
-                        - od czytania ich postów, po&nbsp;przyjmowania zasłużonej krytyki. Napracowałem się, ale&nbsp;opłaciło się do tego stopnia,
+                        - od czytania ich postów, po&nbsp;pisanie własnych, aż&nbsp;po przyjmowanie zasłużonej krytyki. Napracowałem się, ale&nbsp;opłaciło się do tego stopnia,
                         że&nbsp;gdy ostatnio dołączyłem na próbę do kolejnego forum, po pierwszym napisanym przeze mnie poście administratorzy
-                        chcięli mi nadać rangę "doświadczonego użytkownika"(czy coś w tym rodzaju). Wtedy byłem już na studiach i&nbsp;oczywiście
-                        cały czas pracowałem nad książką, głównie nad fabułą. Muszę przyznać, że&nbsp;nie ma do tego lepszego miejsca
-                        niż sala wykładowa mojej uczelni :)</p>
+                        chcięli mi nadać rangę "doświadczonego użytkownika"(czy coś w tym rodzaju).</p>
 
                     <hr>
                     <h3>Więc dlaczego informatyka?</h3>
@@ -171,28 +169,30 @@
                         Kocham pisać i będę pisał. Kropka.</p>
                     <p>W życiu jednak bywa różnie. Może moje książki nie okażą się bestsellerami, a wtedy musiałbym mieć inne źródło dochodu.
                         U nas w Polsce nie ma czegoś takiego jak studia kreatywnego pisania, więc&nbsp;musiałem wybrać coś innego. Zawsze lubiłem
-                        komputery, więc&nbsp;padło na informatykę. Dochodowy kierunek? No pewnie! Przyjemny? Eeee... </p>
+                        komputery, więc&nbsp;padło na informatykę. Dochodowy kierunek? No pewnie! Przyjemny? Eeee... Na dwoje babka wróżyła. </p>
                     <p>Bez bicia przyznam, że&nbsp;w&nbsp;ciągu studiów zastanawiałem się wiele razy, co ja tu k**** robię. Wiem, że&nbsp;nie tyczy się
-                        to tylko mnie jako studenta i mojego kierunku, aczkolwiek&nbsp;udało mi się w końcu odnaleźć - po prostu znalazłem to,
+                        to tylko mnie jako studenta, aczkolwiek&nbsp;udało mi się w&nbsp;końcu odnaleźć - po prostu znalazłem to,
                         co mnie w informatyce interesuje.</p>
-                    <p>Zaczynałem te studia z myślą o zostaniu team menadżerem, czyli&nbsp;kimś, kto&nbsp;odpowiada za pracę zespołu, jednak&nbsp;nie
-                        spędza całego dnia na pisaniu kodu. Zawsze byłem otwarty na ludzi i posiadam odpowiednie umiejętności,
-                        które lepiej sprawdzą się w interakcji z drugim człowiekiem niż myszką i&nbsp;klawiaturą, jednak nikt na początku
+                    <p>Zaczynałem te studia z myślą o zostaniu team menadżerem, czyli&nbsp;kimś, kto&nbsp;odpowiada za pracę zespołu i&nbsp;nie
+                        spędza całego dnia na pisaniu kodu. Zawsze byłem otwarty na ludzi i&nbsp;posiadam odpowiednie umiejętności,
+                        które lepiej sprawdzą się w&nbsp;interakcji z&nbsp;drugim człowiekiem niż myszką i&nbsp;klawiaturą, jednak nikt na początku
                         kariery nie zwerbuje mnie na stanowisko team menadżera. Będę musiał wspinać się po drabinie kariery szczebel
-                        za szczeblem, poczynając&nbsp;od stażysty,<br> a kończąc na… Hmm, ktoś pewnie powiedziałby teraz, że&nbsp;to zależy tylko ode mnie.</p>
-                    <p>Miałby rację.</p>
+                        za szczeblem, poczynając&nbsp;od stażysty, a&nbsp;kończąc na… Hmm, ktoś pewnie powiedziałby teraz, że&nbsp;to zależy już tylko ode mnie.</p>
+                    <p>I może miałby rację.</p>
 
                     <hr>
-                    <h3>Pomysł na bloga.</h3>
+                    <h3>Pomysł na bloga</h3>
                     <hr>
-                    <p>O własnej stronie myślałem już od ponad roku. Parę miesięcy temu poznałem człowieka z branży IT, który&nbsp;został dla mnie
+                    <p>O własnej stronie myślałem już od ponad roku. Parę miesięcy temu poznałem człowieka z&nbsp;branży IT, który&nbsp;został dla mnie
                         swego rodzaju mentorem – doradza, jak&nbsp;rozwijać karierę w branży, czym&nbsp;się obecnie zająć, żeby&nbsp;być atrakcyjnym dla
-                        rekruterów itp. To taki mój mistrz Yoda. Powiedział mi, że&nbsp;fajnie by było, jakbym&nbsp;stworzył stronę o tym, co&nbsp;mnie interesuje.
-                        Chociaż jak o tym myślę powinien raczej powiedzieć: „ Fajnie byłoby, jakbyś o tym, co cię interesuję, stronę stworzył”. </p>
+                        rekruterów itp. To taki mój mistrz Yoda. Powiedział mi, że&nbsp;fajnie by było, jakbym&nbsp;stworzył stronę o&nbsp;tym, co&nbsp;mnie interesuje,
+                       prawdziwy Yoda powiedziałby raczej: „Fajnie byłoby, jakbyś o tym, co cię interesuję, stronę stworzył”. </p>
                     <p>Właśnie tak powstał ten blog – z pasji, lecz&nbsp;iskrą, która&nbsp;rozpaliła płomień, był rozwój mojej kariery informatyka.
+                        Książkę pisałbym dalej tak czy siak, ale&nbsp;to właśnie dzięki Tobie, czytelniku, dowiem&nbsp;się, co&nbsp;powinienem
+                        jeszcze poprawić we własnym warsztacie. Jak mówił Jan Paweł II: "Wymagajcie od siebie, choćby inni od was nie wymagali".
                         Czy jesteś potencjalnym rekruterem, czy&nbsp;zwykłym czytelnikiem, możesz&nbsp;zauważyć, że&nbsp;nie&nbsp;obca mi systematyczna praca,
-                        znam&nbsp;się trochę na technologiach internetowych, znam techniki Jedi, a&nbsp;na&nbsp;podstawie moich tekstów możesz ocenić też,
-                        czy&nbsp;można nazwać mnie kreatywnym. </p>
+                        znam&nbsp;się trochę na technologiach internetowych, znam techniki Jedi(tylko jasna strona mocy),
+                        a&nbsp;na&nbsp;podstawie moich tekstów możesz ocenić też, czy&nbsp;można nazwać mnie kreatywnym. </p>
 
                     <hr>
                     <h3>Zapraszam do kontaktu!</h3>
