--- a/mysite/blog/templates/books/bookList.html
+++ b/mysite/blog/templates/books/bookList.html
@@ -69,12 +69,22 @@
                         <h1 class="textTitle">Teksty</h1>
                         <hr>
                         <h2>Ostatni Zwiastun - księga pierwsza</h2>
-                        <p>opiso pisopisopisopisop isopisopisopisopiso </br>
-                            pisopisopisopisopis opisopisopis opisopisopisopis opisopisopisopis</br>
-                            opis opisop isopisopisopiso pisopis</br>
-                         pisopiso pisopisop isopisopis opisopipi sopipisopipisopi</br>
-                         pisopiso piso pisopisopisop isopisopiv pisop isopiso pisopisopiso pisopisopi</br>
-                         pisop isop isopisopisopis opisopisopi pisopiso pisopisopisopiso pisopisopi</br></p>
+                       <p>Błagajcie o&nbsp;litość! Wypatrujcie znaków! Nadchodzi Ostatni Zwiastun, a&nbsp;wraz z&nbsp;nim czas końca i&nbsp;pożogi!
+                        </p>
+
+                        <p>Północ trzęsie się w&nbsp;posadach, gdy&nbsp;stary konflikt między królestwami Akseron i&nbsp;Delvaru odżywa na nowo.
+                            Dla wojownika z&nbsp;klanu Wilka wojna powinna być powodem do radości, jednak&nbsp;dla Mirande oznacza ucieczkę.
+                        Ogłoszona zdrajczynią przez pobratymców, ucieka&nbsp;do nieprzyjaznego Akseron, prosto&nbsp;w&nbsp;ogień wojny.
+                        Jako jedyna zna tajemnicę, za&nbsp;poznanie której monarchowie spaliliby własne królestwa,
+                            a&nbsp;jedyna droga do&nbsp;jej ocalenia prowadzi przez las nawiedzany przez ludożernego demona.</p>
+                        <p>Aksydus Faust am&nbsp;Birighter musi rozwiązać zagadkę nieudanego królobójstwa, w&nbsp;które wmieszały się magiczne istoty
+                        zwane Natchnionymi. Jeśli mu sie nie uda, akserońscy&nbsp;sojusznicy odkryją jego sekret i&nbsp;zgotują mu los gorszy od śmierci.
+                            Oszust nie spodziewa się jednak, że&nbsp;podczas śledztwa zetknie się z&nbsp;sekretem starszym niż sami bogowie.</p>
+                       <p>Jedno z&nbsp;akserońskich miast ginie w&nbsp;gigantycznej kuli ognia.
+                        Wśród popiołów znajdują nagiego mężczyznę całkowicie pozbawionego pamięci. Trafia&nbsp;on do delvarskiej armii,
+                           gdzie wszyscy zdają sie go znać...&nbsp;i&nbsp;bać się bardziej niż samej śmierci.</p>
+                        <p> Nadchodzi czas końca i&nbsp;pożogi! Błagajcie o&nbsp;litość niewierni...&nbsp;Chyba&nbsp;że akurat jesteście zajęci masowym wyżynaniem sie nawzajem.</p>
+
                         {% for chapter in chapters %}
                         <div class="titleList">
                             <h3><a href='{{chapter.id}}/'>Rozdział {{chapter.number}}, {{ chapter.title }} - musi być linkiem do tekstu</a></h3>
