--- a/blog/templates/about/aboutMe.html
+++ b/blog/templates/about/aboutMe.html
@@ -13,17 +13,17 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="../">www.harbinger.pl</a>
+            <a class="navbar-brand" href="../">antyrecenzja.herokuapp.com</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-item">
-                        <a class="nav-link" href="/signup"><i class="fab fa-instagram"></i></a>
+                        <a class="nav-link" href="https://www.instagram.com/aleksandercuch/"><i class="fab fa-instagram"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href=""><i class="fab fa-facebook-f"></i> </a>
+                        <a class="nav-link" href="https://www.facebook.com/Embers-eyed-100590794634472"><i class="fab fa-facebook-f"></i> </a>
                     </li>
                 </ul>
 
@@ -74,7 +74,7 @@
 
                     <p>Treści na mojej stronie są przeznaczone również dla czytelnika, który&nbsp;szuka rady odnośnie książki do przeczytania lub też
                         po prostu szuka newsów ze świata literatury. Takich podróżników zapraszam do działu "Recenzje", gdzie&nbsp;wypowiadam się
-                        na temat przeczytanych przeze mnie książek, <br> i&nbsp;obserwowania strony głównej, gdzie&nbsp;co mniej więcej półtora
+                        na temat przeczytanych przeze mnie książek, i&nbsp;obserwowania strony głównej, gdzie&nbsp;co mniej więcej półtora
                         tygodnia będzie pojawiać się ciekawy post.</p>
 
                     <p>Dla ciekawskich umieściłem niżej rozszerzoną wersję "O mnie", tymczasem&nbsp;życzę wszystkim ciekawej podróży po mojej stronie
@@ -214,7 +214,7 @@
                     <hr>
                     <p><i class="fas fa-at"></i> cuch.aleksander@gmail.com</p>
                     <p><i class="fab fa-instagram"><a href="https://www.instagram.com/aleksandercuch/"></i> aleksandercuch</a></p>
-                    <p><i class="fab fa-facebook-f"></i><a href=""></a></p>
+                    <p><i class="fab fa-facebook-f"></i><a href="https://www.facebook.com/Embers-eyed-100590794634472">  embers-eyed</a></p>
                     <p><i class="fab fa-linkedin-in"></i><a href="https://www.linkedin.com/in/aleksander-cuch-161118180/"> aleksandercuch</a></p>
                     <hr>
                     <img id="anotherImage" src="https://cdn.pixabay.com/photo/2017/06/19/02/00/embroidery-2417899_960_720.png" alt="Błąd obrazka!">
