--- a/blog/templates/blog/postList.html
+++ b/blog/templates/blog/postList.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
     <head>
-        <title>Aleksander Cuch</title>
+        <title>embers-eyed</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -16,18 +16,18 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">www.harbinger.pl</a>
+            <a class="navbar-brand" href="/">antyrecenzja.herokuapp.com</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
              <div class="collapse navbar-collapse" id="collapsibleNavbar">
                  <ul class="nav navbar-nav navbar-right">
                      <li class="nav-item">
-                        <a class="nav-link" href="/signup"><i class="fab fa-instagram"></i></a>
+                        <a class="nav-link" href="https://www.instagram.com/aleksandercuch/"><i class="fab fa-instagram"></i></a>
 
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href=""><i class="fab fa-facebook-f"></i> </a>
+                        <a class="nav-link" href="https://www.facebook.com/Embers-eyed-100590794634472"><i class="fab fa-facebook-f"></i> </a>
                      </li>
 
                  </ul>
