--- a/blog/templates/signup.html
+++ b/blog/templates/signup.html
@@ -14,18 +14,18 @@
    <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-           <a class="navbar-brand" href="../">www.harbinger.pl</a>
+           <a class="navbar-brand" href="../">antyrecenzja.herokuapp.com</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
              <div class="collapse navbar-collapse" id="collapsibleNavbar">
                  <ul class="nav navbar-nav navbar-right">
                      <li class="nav-item">
-                        <a class="nav-link" href="/signup"><i class="fab fa-instagram"></i></a>
+                        <a class="nav-link" href="https://www.instagram.com/aleksandercuch/"><i class="fab fa-instagram"></i></a>
 
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href=""><i class="fab fa-facebook-f"></i> </a>
+                        <a class="nav-link" href="https://www.facebook.com/Embers-eyed-100590794634472"><i class="fab fa-facebook-f"></i> </a>
                     </li>
 
                  </ul>
